blog: Fix blog layout on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -90,6 +90,10 @@ html[data-theme="dark"] {
   }
 }
 
+.pagination-nav {
+  margin-bottom: 3rem;
+}
+
 .button--primary {
   background-color: var(--brand-core-yellow);
   border: none;
